# Aquabot_Dualboot

./: README.md
hippobot_package/: CMakeLists.txt  README.md  package.xml
hippobot_package/launch/: launch.py
hippobot_package/src/: hippo_node.cpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/Pid_performance_test/share/Pid_performance_test/: package.bash  package.zsh
install/aquabot_common/lib/aquabot_common/: cloud_reader  gps2pose.py  waypoint_tracker.py
install/aquabot_common/share/aquabot_common/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/aquabot_ekf/include/aquabot_ekf/: ally.h  boat.h  covariances.h  gps2enu.h  tf_listener.h
install/aquabot_ekf/lib/aquabot_ekf/: gps2pose
install/aquabot_ekf/share/aquabot_ekf/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/astar_path_planner/lib/astar_path_planner/: path_planner_cell_node
install/astar_path_planner/share/astar_path_planner/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/example_system/lib/example_system/: example_system  state_publisher
install/example_system/share/example_system/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/mapping/lib/mapping/: DetectAndPublishCentroids  FillMap
install/mapping/share/mapping/: local_setup.bash  local_setup.dsv  local_setup.sh  (+3 more)
log/: latest_build
src/: move.py  place_frame.py  tracker.py
src/package_thruster_activation/: CMakeLists.txt
src/package_thruster_activation_save/: package.xml
src/package_thruster_activation_save/src/: thruster_activation.cpp
src/pid_performance_test/: CMakeLists.txt  package.xml
src/pid_performance_test/src/: wind.cpp
src/test_float/: CMakeLists.txt
src/test_float/install/: local_setup.sh
src/test_float/install/cpp_pubsub/share/cpp_pubsub/: package.xml
src/test_float/src/: isolating_bearing.cpp  publisher_float.cpp  state_publisher.cpp
test/cpp_pubsub/: CMakeLists.txt
test/cpp_pubsub/log/: latest_build
test/cpp_pubsub/src/: publisher_member_function.cpp  subscriber_member_function.cpp
test/install/: local_setup.sh  setup.sh
test/log/: latest_build
test/package_thruster_activation/: package.xml
test/package_thruster_activation_save/: CMakeLists.txt
test/package_thruster_activation_save/src/: thruster_activation.cpp
test/test_float/: CMakeLists.txt
test/test_float/install/: setup.sh
test/test_float/src/: publisher_float.cpp  subscriber_float.cpp
vrx_ws/install/: local_setup.sh  setup.sh
vrx_ws/log/: latest_build
(+357 files in other folders)
