cmake_minimum_required(VERSION 3.5)
project(hippobot_package)

find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(std_msgs REQUIRED)

add_executable(hippo_node src/hippo_node.cpp)
ament_target_dependencies(hippo_node rclcpp std_msgs)

install(TARGETS
    hippo_node
    DESTINATION lib/${PROJECT_NAME}
)

ament_package()
